[metadata]
name = port-scanner
author = Craig Janis
author_email = cjanis@gmail.com
license = Unlicense
description = A simple Python port scanner
url = http://github.com/cjanis/python-port-scanner
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = portscanner
zip_safe = False
